@@ -21,6 +21,7 @@ mdadm (3.3.2-1) UNRELEASED; urgency=low
     "mdadm --assemble --scan".  Remove docbook-to-man from build-deps.
   * pass dpkg-buildflags to upstream build system and
     stop using our own -O0, -Os etc
+  * remove separate CFLAGS for udeb and simplify *FLAGS handling
 
  -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 20 Sep 2014 08:49:59 +0400
 
